Fix text-align and space issues as well.

--- a/style-main.css
+++ b/style-main.css
@@ -370,6 +370,7 @@ blockquote {
 
 .detail-box {
     padding: 5% 2%;
+    text-align: justify;
 }
 
 .detail-box:nth-of-type(2) {
